# MrPlate

./: .gitignore  LICENSE  README.md  mrplate.go
code/: platformio.ini
code-emulator/: .gitignore  CMakelists.txt  README.md  platformio.ini
code-emulator/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  README.md
code-emulator/src/: example.cpp  main.cpp  pins.h
code-emulator/src/Adafruit-GFX-Library/: Adafruit_GFX.cpp
code-emulator/src/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h
code-emulator/src/emulator/: Arduino.h  LTexture.cpp  emulator.cpp  ui.cpp  ui.h
code-emulator/src/hal/x64/: Arduino.cpp  Arduino.h  (+4 more)
code-emulator/src/state/: adv.h  basic.h  info.h  init.h  menu.h  state.h
code-mbed/: platformio.ini
code-mbed/src/: main.cpp
code-mbed/src/gfx/: adafruit.cpp  adafruit.h
code-mbed/src/imageMono/: image.cpp  image.h
code-mbed/src/ssd1306/: imageMono.cpp  imageMono.h  ssd1306.cpp  ssd1306.h
code-simple/: .gitignore  CMakeLists.txt  platformio.ini
code-simple/src/: main.cpp
code/src/: board.h  bus.cpp  bus.h  mr-plate-v3.cpp
code/src/anim/: anim.h  markeeAnim.cpp  markeeAnim.h  textAnim.cpp  textAnim.h
code/src/button/: driver.cpp  driver.h
code/src/drivers/: button.cpp  button.h  buttons.cpp  buttons.h  digitalOut.cpp  digitalOut.h  pwm.cpp  pwm.h
code/src/states/: advancedState.cpp  advancedState.h  mainMenuState.cpp  mainMenuState.h  simpleState.cpp  simpleState.h  state.cpp  state.h  welcomeState.cpp  welcomeState.h
ctrl/: Gfx.go  MonochromaticImage.go  MonochromeModel.go  ssd1306Display.go
(+4 files in other folders)
